--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <!-- Add this above your #tasks div -->
 </div>
 <!-- Full screen reminder pop-up (place before </body>) -->
-<div id="reminderPopup" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); color:#fff; z-index:9999; justify-content:center; align-items:center; flex-direction:column; text-align:center;">
+<div id="reminderPopup" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); color:#918989; z-index:9999; justify-content:center; align-items:center; flex-direction:column; text-align:center;">
   <h2 id="reminderTitle"></h2>
   <p id="reminderDesc"></p>
   <button id="closeReminder" class="btn btn-light mt-3">Close</button>
