--- a/index.html
+++ b/index.html
@@ -9,113 +9,82 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Todo-List</title>
 </head>
 <body>
-
     <div class="app">
         <h4 class="mb-3">Todo-app</h4>
         <!-- control buttons: dark/light mode and reset -->
-            <div class="d-flex justify-content-between mb-3">
-      <button id="toggleMode" class="btn btn-secondary">Toggle Dark/Light Mode</button>
-      <button id="resetTasks" class="btn btn-danger">Reset All Tasks</button>
-    </div>
-        <div id="addNew" data-bs-toggle="modal" data-bs-target="#form" >
+        <div class="d-flex justify-content-between mb-3">
+            <button id="toggleMode" class="btn btn-secondary">Toggle Dark/Light Mode</button>
+            <button id="resetTasks" class="btn btn-danger">Reset All Tasks</button>
+        </div>
+        <div id="addNew" data-bs-toggle="modal" data-bs-target="#form">
             <span>Add new task</span>
             <i class="fas fa-plus"></i>
         </div>
         <h5 class="text-center my-3">Tasks</h5>
 
-
-
-<!-- Modal -->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Add New Task</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Task Title</p>
-        <input class="form-control" type="text" name="" id="textInput">
-        <div id="msg"></div>
-        <br>
-        <p>Due Date</p>
-        <input class="form-control" type="date" name="" id="dateInput">
-        <br>
-        <p>Description</p>
-        <textarea class="form-control" name="" id="textarea" cols="30" rows="5"></textarea>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Add</button>
-      </div>
-    </div>
-  </div>
-</form> -->
-
-<form class="modal fade" id="form" ...>
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Add New Task</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <p class="text-end text-secondary mb-2">Today: <span id="todayDate"></span></p>
-        <p>Task Title</p>
-        <input class="form-control" type="text" id="textInput">
-        <div id="msg"></div>
-        <br>
-        <p>Due Date</p>
-        <input class="form-control" type="date" id="dateInput">
-        <br>
-        <p>Description</p>
-        <textarea class="form-control" id="textarea" cols="30" rows="5"></textarea>
-        <br>
-        <p>Email for reminder</p>
-        <input class="form-control" type="email" id="emailInput" placeholder="Enter your email">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Add</button>
-      </div>
-    </div>
-  </div>
-</form>
-
- <div id="tasks">
-        <div>
-            <span class="fw-bold">Task 1</span>
-            <span class="small text-secondary">2025-1-2</span>
-            <p>going to gym for fitness with my babe</p>
-            <span class="options">
-                <i class="fas fa-edit"></i>
-                <i class="fas fa-trash-alt"></i>
-            </span>
-        </div>
-        <div>
-            <span class="fw-bold">Task 2</span>
-            <span class="small text-secondary">2025-7-11</span>
-            <p>call my babe and joshua to check up on them</p>
-            <span class="options">
-                <i class="fas fa-edit"></i>
-                <i class="fas fa-trash-alt"></i>
-            </span>
+        <div id="tasks">
+            <div>
+                <span class="fw-bold">Task 1</span>
+                <span class="small text-secondary">2025-1-2</span>
+                <p>going to gym for fitness with my babe</p>
+                <span class="options">
+                    <i class="fas fa-edit"></i>
+                    <i class="fas fa-trash-alt"></i>
+                </span>
+            </div>
+            <div>
+                <span class="fw-bold">Task 2</span>
+                <span class="small text-secondary">2025-7-11</span>
+                <p>call my babe and joshua to check up on them</p>
+                <span class="options">
+                    <i class="fas fa-edit"></i>
+                    <i class="fas fa-trash-alt"></i>
+                </span>
+            </div>
         </div>
     </div>
-    <!-- Add this above your #tasks div -->
-</div>
-<!-- Full screen reminder pop-up (place before </body>) -->
-<div id="reminderPopup" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); color:#918989; z-index:9999; justify-content:center; align-items:center; flex-direction:column; text-align:center;">
-  <h2 id="reminderTitle"></h2>
-  <p id="reminderDesc"></p>
-  <button id="closeReminder" class="btn btn-light mt-3">Close</button>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script src="index.js"></script>
 
+    <!-- Modal Form -->
+    <form class="modal fade" id="form" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add New Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-end text-secondary mb-2">Today: <span id="todayDate"></span></p>
+                    <p>Task Title</p>
+                    <input class="form-control" type="text" id="textInput">
+                    <div id="msg"></div>
+                    <br>
+                    <p>Due Date</p>
+                    <input class="form-control" type="date" id="dateInput">
+                    <br>
+                    <p>Description</p>
+                    <textarea class="form-control" id="textarea" cols="30" rows="5"></textarea>
+                    <br>
+                    <p>Email for reminder</p>
+                    <input class="form-control" type="email" id="emailInput" placeholder="Enter your email">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <!-- Full screen reminder pop-up -->
+    <div id="reminderPopup" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.85); color:#fff; z-index:9999; justify-content:center; align-items:center; flex-direction:column; text-align:center;">
+        <h2 id="reminderTitle"></h2>
+        <p id="reminderDesc"></p>
+        <button id="closeReminder" class="btn btn-light mt-3">Close</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
